update: 更新搜索、首页布局、标题显示全文

--- a/content/commercial/20251029gsf600.md
+++ b/content/commercial/20251029gsf600.md
@@ -11,7 +11,7 @@ slug: "gsf600"
 ## 📘 图书简介
 
 李建伟老师从一个企业家、经理人的创业立场来观察公司法的运行，从一个商人的利益关切来解读公司法的实现，从一个商事律师的胜败视角来领会公司法的裁判。
-
+<!--more-->
 文字之间贯彻着自觉的商事思维，表达了公司法治的底层逻辑，运用“从实践到规范”的研究路径，而非“从规范到规范”的学术自洽。
 
 书中不仅探讨制度，更关注制度背后的人——他们的困惑、争斗、挣扎与成长，饱含一种“劝人为善、勉人诚信”的商事人文情怀。
