update: rename and fix _index for pdfss and otherss

--- a/content/posts/commercial/20251029gsf600.md
+++ b/content/posts/commercial/20251029gsf600.md
@@ -3,6 +3,7 @@ title: "李建伟《公司法600问（上下册）》笔记"
 date: 2025-10-29
 author: "xuufaa"
 categories: ["商法", "法考笔记"]
+series: ["法考专题"]
 tags: ["公司法", "李建伟", "法考", "商法", "法律人文"]
 description: "李建伟老师以企业家、商人、律师三重身份，深入剖析公司法运行逻辑，展现实践与规范之间的商事智慧。"
 slug: "gsf600"
